fixed confrirm check overlap with btn

--- a/src/components/confirmScreen/style.css
+++ b/src/components/confirmScreen/style.css
@@ -28,7 +28,7 @@
   top: 40%;
   left: 50%;
   width: 100dvw;
-  /* max-width: 250px; */
+  max-width: 250px;
   height: auto;
 
   transform: translate(-50%, -40%);
